# better-uptime

./: Cargo.toml
api/: .env.example  Cargo.toml
api/src/: main.rs
api/src/routes/: user.rs  website.rs
api/src/types/: request.rs  response.rs
docker/: .env.example  docker-compose.yml  docker.sh
store/: Cargo.toml  diesel.toml
store/src/: config.rs  store.rs
store/src/models/: website.rs
